[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "age-oauth"
version = "0.1.8"
description = "ArcGIS Enterprise OAuth helper with per user token cache."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.txt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
authors = [{ name = "Eric Eagle" }]
dependencies = [
  "requests>=2.31",
  "platformdirs>=3.0",
]

[project.optional-dependencies]
arcgis = ["arcgis"]
dotenv = ["python-dotenv>=1.0"]
mapping = ["arcgis-mapping"]
full = [
    "arcgis",
    "arcgis-mapping",
    "python-dotenv>=1.0"
]

[project.scripts]
age-oauth = "age_oauth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
